cm4all-workshop (6.13) unstable; urgency=low

  * translation: add packet ALLOW_PTRACE
  * sql: add index on "cronresults.finished" for pruning old rows

 --   

cm4all-workshop (6.12) unstable; urgency=low

  * spawn: disable the PID namespace for the spawner process
  * spawn: reassociate with existing user/IPC namespace (experimental)
  * spawn: hold a namespace lease

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Sep 2025 09:00:31 +0200

cm4all-workshop (6.11) unstable; urgency=low

  * workshop: use state directories to enable/disable the queue
  * systemd: do not restart on configuration errors
  * debian: start daemon during initial installation, stop on uninstall

 -- Max Kellermann <mk@cm4all.com>  Tue, 19 Aug 2025 13:29:35 +0200

cm4all-workshop (6.10) unstable; urgency=low

  * workshop: create session cgroups
  * workshop: do not override the translation server's cgroup settings for
    "spawn"
  * cron: check the translation status for HTTP jobs
  * pond: truncate long lines before sending to Pond

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Aug 2025 08:38:40 +0200

cm4all-workshop (6.9) unstable; urgency=low

  * spawn: fix assertion failure with large payloads
  * spawn: fix hanging main process after spawner failure
  * translation: add packet REAL_UID_GID
  * switch to C++23
  * require Meson 1.2

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Apr 2025 12:01:37 +0200

cm4all-workshop (6.8) unstable; urgency=low

  * translation: allow BIND_MOUNT from container
  * translation: add packet BIND_MOUNT_FILE_EXEC

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Feb 2025 20:29:02 +0100

cm4all-workshop (6.7) unstable; urgency=low

  * cron: improve schedule parser error message
  * cron: case-insensitive month/day name parser
  * spawn: allow HOME inside a BIND_MOUNT
  * translation: add packet BIND_MOUNT_RW_EXEC

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 Feb 2025 08:31:58 +0100

cm4all-workshop (6.6) unstable; urgency=low
