@@ -1,6 +1,7 @@
 cm4all-workshop (6.13) unstable; urgency=low
 
   * translation: add packet ALLOW_PTRACE
+  * cron: allow multipliers for "@hourly"
   * sql: add index on "cronresults.finished" for pruning old rows
 
  --   
